# rust-coding-dojo

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  opencode.json  sonar-project.properties
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: hackathon.yml
.github/scripts/: check-solutions.sh
.github/skills/quantum-ds/: SKILL.md
.github/workflows/: academy.yml  ci.yml  coverage.yml  deny.yml  labeler.yml  msrv.yml  nightly.yml  pr-lint.yml  release.yml  stale.yml
.opencode/skills/rust-qualimetry/: SKILL.md
academy/: index.html  package-lock.json  package.json  vite.config.ts
academy/public/: manifest.json
academy/scripts/: parse-katas.js
academy/src/: App.tsx  index.css  types.ts
academy/src/components/: Header.tsx
academy/src/data/: gamification.test.ts  gamification.ts  katas.generated.ts  katas.json  katas.test.ts  katas.ts
academy/src/editor/: rustCompiler.test.ts  rustCompiler.ts
academy/src/llm/: ferris.ts  localWllama.ts
academy/src/screens/: DashScreen.tsx  GraalScreen.tsx  KataScreen.tsx  PathScreen.tsx  ProfileScreen.tsx  TreeScreen.tsx  treeState.test.ts  treeState.ts
academy/src/store/: AppContext.tsx  progress.test.ts  progress.ts
academy/tools/: generate-katas.cjs  parse-katas.cjs  parse-katas.test.cjs
docs/agent-instructions/docs-sync/: INSTRUCTION.md  PR_TEMPLATE.md  USAGE.md
docs/superpowers/specs/: 2026-06-24-academy-skill-tree-live-design.md
katas/: README.md
katas/00-setup/: 00-install.md  01-cargo.md  02-compiler.md
katas/01-starter/: README.md
katas/01-starter/00-rustward-sword/: Cargo.toml  README.md
katas/01-starter/01-roman-numerals/: Cargo.toml  README.md
katas/01-starter/01-roman-numerals/solutions/: main.rs
katas/01-starter/01-roman-numerals/src/: main.rs
katas/01-starter/02-rpn_calculator/: README.md
katas/01-starter/03-ownership-borrowing/: README.md
katas/01-starter/04-fizzbuzz/: Cargo.toml  README.md
katas/01-starter/05-leap-years/: Cargo.toml  README.md
katas/01-starter/06-bowling/: Cargo.toml  README.md
katas/01-starter/07-string-calculator/: Cargo.toml  README.md
katas/01-starter/08-tennis/: Cargo.toml  README.md
katas/01-starter/09-foobaqix/: Cargo.toml  README.md
katas/01-starter/10-nim-game/: Cargo.toml  README.md
katas/01-starter/11-word-wrap/: Cargo.toml  README.md
katas/01-starter/12-number-to-lcd/: Cargo.toml  README.md
katas/01-starter/13-greed/: Cargo.toml  README.md
katas/02-structure/: README.md
katas/02-structure/00-basics/: README.md
katas/02-structure/02-game-of-life/: README.md
katas/03-advanced/: README.md
poc_wllama/: HANDOFF.md  README.md  index.html  package-lock.json  package.json
poc_wllama/src/: assistant-widget.ts  main.ts  styles.css
rewards/harness/: instruction.md
(+154 files in other folders)
