[workspace]
resolver = "2"
rust-version = "1.75.0"
members = [
    "katas/01-starter/00-rustward-sword",
    "katas/01-starter/01-roman-numerals",
    "katas/01-starter/02-rpn_calculator",
    "katas/01-starter/03-ownership-borrowing",
    "katas/01-starter/04-fizzbuzz",
    "katas/01-starter/05-leap-years",
    "katas/01-starter/06-bowling",
    "katas/01-starter/07-string-calculator",
    "katas/01-starter/08-tennis",
    "katas/02-structure/00-basics",
    "katas/02-structure/01-smart-pointers",
    "katas/02-structure/02-game-of-life",
    "katas/02-structure/03-minesweeper",
    "katas/02-structure/04-poker-hands",
    "katas/02-structure/05-diamond",
    "katas/03-advanced/00-mars-rover",
]
