[workspace]
resolver = "2"
rust-version = "1.75.0"
members = [
    "katas/01-starter/00-rustward-sword",
    "katas/01-starter/01-roman-numerals",
    "katas/01-starter/02-rpn_calculator",
    "katas/01-starter/03-ownership-borrowing",
    "katas/01-starter/04-fizzbuzz",
    "katas/01-starter/05-leap-years",
    "katas/01-starter/06-bowling",
    "katas/01-starter/07-string-calculator",
    "katas/01-starter/08-tennis",
    "katas/01-starter/09-foobaqix",
    "katas/01-starter/10-nim-game",
    "katas/01-starter/11-word-wrap",
    "katas/01-starter/12-number-to-lcd",
    "katas/01-starter/13-greed",
    "katas/02-structure/00-basics",
    "katas/02-structure/01-smart-pointers",
    "katas/02-structure/02-game-of-life",
    "katas/02-structure/03-minesweeper",
    "katas/02-structure/04-poker-hands",
    "katas/02-structure/05-diamond",
    "katas/02-structure/06-yahtzee",
    "katas/02-structure/07-berlin-clock",
    "katas/02-structure/08-gilded-rose",
    "katas/02-structure/09-range",
    "katas/02-structure/10-birthday-greetings",
    "katas/02-structure/11-wallet",
    "katas/02-structure/12-trading-card-game",
    "katas/02-structure/13-social-network",
    "katas/02-structure/14-anagram",
    "katas/02-structure/15-bank-ocr",
    "katas/03-advanced/00-mars-rover",
    "katas/03-advanced/01-sudoku",
    "katas/03-advanced/02-langton-ant",
    "katas/03-advanced/03-brainfuck",
    "katas/03-advanced/04-mathematical-ast",
    "katas/03-advanced/05-christmas-delivery",
]
