[package]
name = "roman-numerals"
version = "0.1.0"
edition = "2021"
publish = ["artifactory-remote"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
# Enables VSCode to show a button "Run tests" directly below #[cfg(test)] and #[test] annotations inside the file solutions/main.rs (and also to use the command: cargo run --bin solutions)
name = "solutions"
path = "solutions/main.rs"